Fix word breaks on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -18,6 +18,7 @@ h1 {
   font-size: 48px;
   color: white;
   line-height: 66px;
+  margin-bottom: 12px;
 }
 
 h2 {
@@ -96,6 +97,10 @@ h2 {
 
   .logo {
     text-align: left;
+  }
+
+  .break-large {
+    display: none;
   }
 }
 
